# xieite

./: CMakeLists.txt  README.md
include/xieite/: arrow.hpp  forward.hpp
src/: xieite.cpp
src/algorithms/: all.cpp  any.cpp  find_most_consecutive.cpp  find_occurrence.cpp  get_most_consecutive.cpp  get_occurrence.cpp  is_palindrome.cpp  is_rotated.cpp  is_uniform_matrix.cpp  mean.cpp  median.cpp  modes.cpp  number_search.cpp  partial_reverse.cpp  rotate.cpp
src/bits/: big_endify.cpp  fill.cpp  join.cpp  little_endify.cpp  mash.cpp  reverse.cpp  size.cpp  unjoin.cpp  unmash.cpp  xor_shift.cpp
src/concepts/: aggregate.cpp  arithmetic.cpp  base_of.cpp  bitset_reference.cpp  character.cpp  clock.cpp  constant.cpp  convertible_from.cpp  convertible_to_all.cpp  convertible_to_any.cpp  copy_assignable.cpp  copy_constructible.cpp  decayed.cpp  default_constructible.cpp  derivable.cpp  derived_from_all.cpp  derived_from_any.cpp  destructible.cpp  duration.cpp  enumeration.cpp  hashable.cpp  hasher.cpp  input_stream.cpp  integral.cpp  invocable.cpp  left_value_reference.cpp  linear_shape.cpp  narrow_character.cpp  no_throw_brace_initializable.cpp  no_throw_convertible_to.cpp  no_throw_destructible.cpp  no_throw_invocable.cpp  no_throw_operable_iterator.cpp  no_throw_operable_range.cpp  numeric.cpp  ordinary_character.cpp  output_stream.cpp  pointer.cpp  polymorphic.cpp  ratio.cpp  (+15 more)
src/containers/: apply_array.cpp  copy_copy_assignable.cpp  copy_copy_constructible.cpp  copy_default_constructible.cpp  copy_move_assignable.cpp  copy_move_constructible.cpp  decay_as_tuple.cpp  fixed_map.cpp  fixed_set.cpp  fixed_string.cpp  forward_tuple.cpp  make_array.cpp  reverse_tuple.cpp  splice_tuple.cpp  tuple_map.cpp  tuple_set.cpp  tupleify.cpp
src/functors/: also.cpp  counter.cpp  distribute_arguments.cpp  distribute_arguments_recursively.cpp  function.cpp  memoize.cpp  mixfix.cpp  process_guard.cpp  reverse_arguments.cpp  scope_guard.cpp  templatify.cpp  time.cpp  try_constant_arguments.cpp  unroll.cpp
src/geometry/: intersections.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  rotate.cpp  scale.cpp  segment.cpp
src/hashes/: combine.cpp  distribute.cpp  djb2.cpp  md5.cpp
src/literals/: durations.cpp  numbers.cpp  radix.cpp
src/math/: absolute.cpp  addition_overflows.cpp  almost_equal.cpp  almost_equal_slope.cpp  average.cpp  big_integer.cpp  bit_field.cpp  closest_to.cpp  cosine.cpp  difference.cpp  digits.cpp  divide_down.cpp  divide_half_down.cpp  divide_half_toward_infinity.cpp  divide_half_toward_zero.cpp  divide_half_up.cpp  divide_toward_infinity.cpp  divide_toward_zero.cpp  divide_up.cpp  double_integer.cpp  exponent.cpp  exponentation_overflows.cpp  factorial.cpp  farthest_from.cpp  fibonacci.cpp  interval.cpp  is_between_fixed.cpp  is_between_magnitude.cpp  is_negative.cpp  is_power_of_2.cpp  is_prime.cpp  limits_fixed.cpp  limits_magnitude.cpp  logarithm.cpp  median.cpp  merge_intervals.cpp  modulo.cpp  multiplication_overflows.cpp  multiply.cpp  number.cpp  (+23 more)
src/memory/: detect_cosmic_ray.cpp  get_available.cpp  get_page_size.cpp  get_total.cpp  shredder.cpp
src/random/: uniform_distribution.cpp  uniform_interruptable_distribution.cpp
src/streams/: color.cpp  file.cpp  pipe.cpp  read.cpp  standard_handle.cpp
src/strings/: after.cpp  before.cpp  between.cpp  characters.cpp  from_roman_numerals.cpp  is_number.cpp  join.cpp  lowercase.cpp  number_components.cpp  pad.cpp  (+14 more)
(+379 files in other folders)
